Update configuration for 162

--- a/asset/site/162/index.html
+++ b/asset/site/162/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/site/162/style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Nashrulah Fathul Qoriib</title>
 </head>
 <body>
   <div class="profile">
-    <img class="profile-image" src="/site/162/profile-circle.png" alt="Foto Profil">
+    <img class="profile-image" src="./profile-circle.png" alt="Foto Profil">
     <p class="profile-content">Hi, I'm <strong>Nashrullah Fathul Qoriib</strong>, a passionate self-taught front-end web developer and student in Institut Teknologi Sumatera. My passion for software lies with dreaming up ideas and making them come true with elegant interfaces. I take great care in experience, architecture, and code quality of things I build.</p>
   </div>
 </body>
